<resources>
    <string name="app_name">Getit</string>
    <string name="action_settings">Settings</string>
    <string name="not_registered">not registered</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="already_registered">already registered?</string>
    <string name="confirm_password">confirm password</string>
    <string name="getit">getit</string>
    <string name="name">name</string>
    <string name="course_category_prompt">Choose a Course Category</string>
    <string-array name="course_categories">
        <item>BIOL</item>
        <item>COM S</item>
        <item>CPRE</item>
        <item>Econ</item>
        <item>ENG</item>
        <item>ENGLISH</item>
        <item>MATH</item>
        <item>Phil</item>
        <item>SE</item>
    </string-array>
</resources>
